--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "stripe": "^14.0.0"
+    "google-spreadsheet": "^3.5.0"
   },
   "engines": {
     "node": ">=18.0.0"
