--- a/api/package.json
+++ b/api/package.json
@@ -9,7 +9,7 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "stripe": "^14.0.0"
+    "stripe": "^14.0.0",
     "google-spreadsheet": "^3.5.0"
   },
   "engines": {
