--- a/api/package.json
+++ b/api/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "stripe": "^14.0.0",
-    "google-spreadsheet": "^5.0.2"
+    "google-spreadsheet": "^5.0.2",
+    "google-auth-library": "^9.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
