--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "stripe": "^14.0.0",
     "google-spreadsheet": "^5.0.2"
+    "google-auth-library": "^9.0.0"
 
   },
   "engines": {
