--- a/api/package.json
+++ b/api/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "stripe": "^14.0.0",
-    "google-spreadsheet": "^5.0.2"
+    "google-spreadsheet": "^5.0.2",
     "google-auth-library": "^9.0.0"
 
   },
