--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 { 
   "name": "space-estate",
   "version": "1.0.0",
-   "dependencies": {
-    "stripe": "^14.0.0"
+  "dependencies": {
+    "stripe": "^14.0.0",
+    "redis": "^4.10.0"
   },
   "engines": {
     "node": ">=18.0.0"
