--- a/api/package.json
+++ b/api/package.json
@@ -16,7 +16,8 @@
     "google-spreadsheet": "^5.0.2",
     "google-auth-library": "^9.4.1",
     "puppeteer": "^21.6.1",
-    "nodemailer": "^6.9.8"
+    "nodemailer": "^6.9.8",
+    "redis": "^4.7.0"
   },
   "devDependencies": {
     "@vercel/node": "^3.0.12"
