Change rewrites to routes in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -28,10 +28,10 @@
       ]
     }
   ],
-  "rewrites": [
+  "routes": [
     {
-      "source": "/api/(.*)",
-      "destination": "/api/$1"
+      "src": "/(.*)",
+      "dest": "/$1"
     }
   ]
 }
