--- a/vercel.json
+++ b/vercel.json
@@ -30,8 +30,8 @@
   ],
   "rewrites": [
     {
-      "source": "/api/(.*)",
-      "destination": "/api/$1"
+      "source": "/(.*)",
+      "destination": "/$1"
     }
   ],
   "cleanUrls": true,
