--- a/vercel.json
+++ b/vercel.json
@@ -16,12 +16,12 @@
       ]
     }
   ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
-    }
-  ],
-  "cleanUrls": true,
-  "trailingSlash": false
+  "rewrites": [
+    { "source": "/", "destination": "/index.html" },
+    { "source": "/index.html", "destination": "/index.html" },
+    { "source": "/checkin.css", "destination": "/checkin.css" },
+    { "source": "/checkin.js", "destination": "/checkin.js" },
+    { "source": "/successo-pagamento.html", "destination": "/successo-pagamento.html" },
+    { "source": "/api/(.*)", "destination": "/api/$1" }
+  ]
 }
