--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
   "version": 2,
+  "buildCommand": "npm run build",
+  "outputDirectory": "public",
   "functions": {
     "api/**/*.js": {
       "maxDuration": 30
@@ -15,13 +17,5 @@
         { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version, Authorization" }
       ]
     }
-  ],
-  "rewrites": [
-    { "source": "/", "destination": "/index.html" },
-    { "source": "/index.html", "destination": "/index.html" },
-    { "source": "/checkin.css", "destination": "/checkin.css" },
-    { "source": "/checkin.js", "destination": "/checkin.js" },
-    { "source": "/successo-pagamento.html", "destination": "/successo-pagamento.html" },
-    { "source": "/api/(.*)", "destination": "/api/$1" }
   ]
 }
