--- a/api/package.json
+++ b/api/package.json
@@ -12,7 +12,7 @@
     "google-spreadsheet": "^5.0.2",
     "google-auth-library": "^9.15.0",
     "nodemailer": "^6.9.18",
-    "redis": "^4.7.0"
+    "postgres": "^3.4.4"
   },
   "devDependencies": {
     "@vercel/node": "^3.2.27"
@@ -26,7 +26,8 @@
     "pdf",
     "google-sheets",
     "vercel",
-    "nodejs"
+    "nodejs",
+    "postgresql"
   ],
   "author": "Space Estate",
   "license": "MIT",
